--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.3",
     "aws-sdk": "^2.4.7",
+    "bluebird": "^3.4.6",
     "bunyan": "^1.8.1",
     "in-publish": "^2.0.0",
     "joi": "^9.1.0",
