--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ftl",
     "engine"
   ],
-  "author": "addisonj",
+  "author": "dcollinsf5",
   "license": "MIT",
   "devDependencies": {
     "bunyan-prettystream": "^0.1.3",
