--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "joi": "^9.1.0",
     "lodash": "^4.10.0",
     "shortid": "^2.2.6",
-    "simple-swf": "^0.0.6",
+    "simple-swf": "0.1.1-beta",
     "source-map-support": "^0.4.0",
     "statsd-client": "^0.2.2",
     "superagent": "^2.1.0",
