--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test": "mocha --require source-map-support/register build/test/*Test.js build/test/**/*Test.js && npm run lint",
     "testSingle": "./testSingle.sh",
     "lint": "tslint src/*.ts src/**/*.ts",
-    "clean": "rm -rf build",
+    "clean": "rm -rf ./build",
     "build-full": "npm run clean && npm run typings && tsc",
     "build": "tsc",
     "typings": "npm run typings-clean && typings install",
-    "typings-clean": "rm -rf src/typings",
+    "typings-clean": "rm -rf ./typings",
     "prepublish": "npm run build-full",
     "coverage": "npm run build && istanbul cover _mocha --  build/test/*Test.js build/test/**/*Test.js"
   },
@@ -29,6 +29,19 @@
   "author": "dcollinsf5",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.37",
+    "@types/node": "^6.0.45",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/joi": "^9.0.32",
+    "@types/bluebird": "^3.0.35",
+    "@types/shortid": "0.0.28",
+    "@types/statsd-client": "^0.1.30",
+    "@types/bunyan": "0.0.31",
+    "@types/yargs": "0.0.34",
+    "@types/async": "^2.0.32",
+    "@types/sinon": "^1.16.31",
+    "@types/es6-promise": "0.0.32",
     "bunyan-prettystream": "^0.1.3",
     "chai": "^3.5.0",
     "istanbul": "^0.4.3",
@@ -39,7 +52,7 @@
     "typings": "^1.3.1"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
+    "async": "^2.0.32",
     "aws-sdk": "^2.4.7",
     "bluebird": "^3.4.6",
     "bunyan": "^1.8.1",
@@ -47,7 +60,7 @@
     "joi": "^9.1.0",
     "lodash": "^4.10.0",
     "shortid": "^2.2.6",
-    "simple-swf": "0.1.1-beta",
+    "simple-swf": "0.2.0-beta",
     "source-map-support": "^0.4.0",
     "statsd-client": "^0.2.2",
     "superagent": "^2.1.0",
