--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "joi": "^9.1.0",
     "lodash": "^4.10.0",
     "shortid": "^2.2.6",
-    "simple-swf": "https://github.com/f5itc/simple-swf#master",
+    "simple-swf": "0.2.1-beta",
     "source-map-support": "^0.4.0",
     "statsd-client": "^0.2.2",
     "superagent": "^2.1.0",
