--- a/package.json
+++ b/package.json
@@ -48,13 +48,14 @@
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
     "tslint": "^3.7.4",
-    "typescript": "^2.0.0",
+    "typescript": "^2.2.1",
     "typings": "^1.3.1"
   },
   "dependencies": {
     "async": "^2.0.32",
     "aws-sdk": "^2.4.7",
     "bluebird": "^3.4.6",
+    "bluebird-retry": "^0.10.1",
     "bunyan": "^1.8.1",
     "in-publish": "^2.0.0",
     "joi": "^9.1.0",
